# Conrol-Results

./: .gitignore  README.md  pyproject.toml
building-model/: MultiZone.fmu  MultiZone.mo
data/base_scenario/week_1/: inputs.csv  results_hysteresis.csv  results_mpc.csv  results_psc.csv
data/base_scenario/week_11/: inputs.csv  results_hysteresis.csv  results_mpc.csv  results_psc.csv
data/base_scenario/week_12/: inputs.csv  results_hysteresis.csv  results_mpc.csv  results_psc.csv
data/base_scenario/week_2/: inputs.csv  results_hysteresis.csv  results_mpc.csv  results_psc.csv
data/base_scenario/week_3/: inputs.csv  results_hysteresis.csv  results_mpc.csv  results_psc.csv
data/base_scenario/week_4/: inputs.csv  results_hysteresis.csv  results_mpc.csv  results_psc.csv
data/base_scenario/week_5/: inputs.csv  results_hysteresis.csv  results_mpc.csv  results_psc.csv
data/base_scenario/week_6/: inputs.csv  results_hysteresis.csv  results_mpc.csv  results_psc.csv
data/base_scenario/week_7/: inputs.csv  results_hysteresis.csv  results_mpc.csv  results_psc.csv
data/base_scenario/week_9/: inputs.csv  results_hysteresis.csv  results_mpc.csv  results_psc.csv
data/config/: heat_pump_config.json  heat_pump_schema.json  model_parameters_config.json  model_parameters_schema.json  temperature_bounds_config.json  temperature_bounds_schema.json
data/multizone_scenario/week_1/: inputs.csv  results_hysteresis.csv  results_mpc.csv  results_psc.csv
occupant-oriented-demand-response/: ControlAlgorithmsMultipleRooms.py  HelpFunctions.py  control_loop.py  fmu.py  mpc.py
results/Adaptive_High/: Average_Results_Combined.xlsx
results/Adaptive_Low/: Average_Results_Combined.xlsx
results/Base_High/: Average_Results_Combined.xlsx
results/Base_Low/: Average_Results_Combined.xlsx
src/: hysteresis.py  mpc.py  psc.py
src/core/: dataprovider.py  externaldata.py  heatpump.py  model.py  modelparameters.py  mpc_controller.py  simulator.py  temperaturebounds.py  zones.py
src/utils/: dataframe.py  fit.py  flat_list.py  interpolate.py  json.py  pickle.py
(+208 files in other folders)
